Revision history for perl distribution Convos

5.05 Not Released
 - Add support for for ":-*", ":O" and "(Y)" #534
   Contributor: Megaf
 - Fix not adding new private messages, unless historyStopAt
 - Fix resetting historyStopAt and historyStartAt when jumping back in history

5.04 2020-11-24T21:42:00+0900
 - Fix pasting text into the chat input
 - Fix updating search field value

5.03 2020-11-24T21:24:00+0900
 - Fix not jumping back in the chat input when pressing shift

5.02 2020-11-24T18:53:00+0900
 - Add user input to localStorage, so it survives refresh
 - Fix injecting upload link to user input field
 - Fix not dropping key pressees

5.01 2020-11-23T14:23:00+0900
 - Add support for negotiating IRCv3 capabilities #444
 - Add chat input text is coupled to conversation #524
   Contributor: Thibault Duponchelle
 - Add support for hiding join/part messages #527
   Contributor: Thibault Duponchelle
 - Change WHOIS reply to show more information #528
   Contributor: Abhijit Menon-Sen
 - Add "realname" as a new connection parameter #529
   Contributor: Abhijit Menon-Sen
 - Add WHOIS will be run on new private messages
 - Changed service accounts "chanserv" and "nickserv" will show up in connection conversation #379 #532
 - Change clicking on a nick will create a new conversation #530
 - Fix avoid rendering regexes as markdown links #522
 - Fix not sending username with a non-alphanumeric first character #531
   Contributor: Abhijit Menon-Sen
 - Fix J::V and M::P::OpeAPI dependencies
 - Fix clicking on [settings] link in chat
 - Fix loading notifications
 - Fix not counting your own messages as unread
 - Fix not queueing a connection if wanted_state is "disconnected"
 - Fix scrolling to bottom of conversation on initial render

5.00 2020-11-17T07:24:00+0900
 - Renamed "Dialog" to "Conversation" #519
 - Renamed "$sidebar-item-dialog-indent" css variable to "$sidebar-item-conversation-indent" #519
 - Renamed API endpoints from "dialogs" to "conversations" #519
