@@ -5,7 +5,7 @@ requires "File::HomeDir"                  => "1.00";
 requires "File::ReadBackwards"            => "1.05";
 requires "IRC::Utils"                     => "0.12";
 requires "JSON::Validator"                => "4.10";
-requires "LinkEmbedder"                   => "1.14";
+requires "LinkEmbedder"                   => "1.15";
 requires "Module::Install"                => "1.10"; # required by Text::MultiMarkdown
 requires "Mojolicious"                    => "8.55";
 requires "Mojolicious::Plugin::OpenAPI"   => "3.40";
